[gd_scene load_steps=8 format=2]

[ext_resource path="res://Outfits/Enemy outfit.tscn" type="PackedScene" id=1]
[ext_resource path="res://Actor/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Outfits/Player_outfit .tscn" type="PackedScene" id=3]
[ext_resource path="res://Outfits/Enemy outfit2.tscn" type="PackedScene" id=4]
[ext_resource path="res://Outfits/Enemy outfit3.tscn" type="PackedScene" id=5]
[ext_resource path="res://Actor/Player/Player_Statemachine.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Player" type="KinematicBody2D" groups=[
"Players",
]]
scale = Vector2( 0.33, 0.33 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Statemachine" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Body" type="Node2D" parent="."]

[node name="Player_outfit" parent="Body" instance=ExtResource( 3 )]

[node name="Enemy outfit" parent="Body" instance=ExtResource( 1 )]
visible = false

[node name="Enemy outfit2" parent="Body" instance=ExtResource( 4 )]
visible = false

[node name="Enemy outfit3" parent="Body" instance=ExtResource( 5 )]
visible = false

[node name="AudioLibrary" type="Node2D" parent="."]

[node name="Jump" type="AudioStreamPlayer2D" parent="AudioLibrary"]

[node name="Attack" type="AudioStreamPlayer2D" parent="AudioLibrary"]

[node name="Run" type="AudioStreamPlayer2D" parent="AudioLibrary"]

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
limit_left = 0
limit_top = 0
limit_right = 512
limit_bottom = 300
